fixed layout of classes page and pagination layout bug

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -215,7 +215,7 @@ width: 100%;
 
 /*=== Cards ===*/
 .card-text {
-    min-height: 80px;
+    min-height: 50px;
 }
 
 .small-btn {
